--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 
 	<title>Glassmorphism ScreenShot Generator</title>
 
+        <meta name="google-site-verification" content="3owmhOcHUTEazfhhnlKyM2GdJt6denQWqt77tF6VX6M" />
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
